grammar.js
    source_file: ($) =>
      seq(optional($.shebang), optional(repeat($._statement))),

    _statement: ($) =>
      seq(
        choice(
          $.mod,
          $.use,
          $.comment,
          $.struct_declaration,
          $.enum_declaration,
          $.union_declaration,
          $.protocol_declaration,
          $.type_alias_declaration,
          $.implementation_declaration,
          $.function_declaration,
          $._expression,
        ),
        optional(";"),
      ),

    identifier: (_) => prec(PREC.IDENTIFIER, /[_a-z][_a-z\d]*/),
    type_identifier_name: (_) => prec(PREC.IDENTIFIER, /[A-Z]\w*/),
    function_type_identifier_name: (_) =>
      prec(PREC.IDENTIFIER, /[_a-z][_a-z\d]*/),

    type_identifier: ($) =>
      prec.right(
        PREC.IDENTIFIER,
        seq(
          field("name", $.type_identifier_name),
          optional(field("generics", $.generic_type_parameters)),
        ),
      ),

    function_type_identifier: ($) =>
      prec.right(
        PREC.IDENTIFIER,
        seq(
          field("name", $.function_type_identifier_name),
          optional(field("generics", $.generic_type_parameters)),
        ),
      ),

    generic_type_parameters: ($) =>
      prec(
        PREC.DEFAULT,
        seq("<", type_parameters($, $.generic_identifier), ">"),
      ),

    type_annotation: ($) =>
      prec.left(
        PREC.DEFAULT,
        choice(
          "Void",
          "Unit",
          "Bool",
          "Int",
          "UInt",
          "Float",
          "Rune",
          "String",
          seq("[", field("array_type", $.type_annotation), "]"),
          seq("(", sepTrailing1(",", $.type_annotation), ")"),
          seq(
            "fun",
            "(",
            sepTrailing(",", "param_types", $.type_annotation),
            ")",
            optional(afterColon(field("return_type", $.type_annotation))),
          ),
          choice($.concrete_type_annotation, $.qualified_type_annotation),
        ),
      ),

    concrete_type_annotation: ($) =>
      prec.left(
        choice(
          seq(
            field("type_name", $.type_identifier_name),
            optional($.concrete_type_parameters),
          ),
          seq(
            field("enum_name", $.type_identifier_name),
            optional($.concrete_type_parameters),
            "::",
            field("enum_variant", $.type_identifier_name),
          ),
        ),
      ),

    _expression: ($) =>
      prec.left(
        PREC.EXPRESSION,
        choice(
          $.range,
          $.loop,
          $.while,
          $.for,
          $.block,
          $.assignment,
          $.compound_assignment,
          $.binary,
          $.variable_declaration,
          $.if,
          $.unary,
          $.propagation,
          $.closure,
          $.match,
          $.trailing_closure,
          $.call,
          $.member,
          $.type_constructor,
          $.static_member_function,
          $.literal,
          $.tuple,
          $.collection,
          $.identifier,
          $.break,
          $.continue,
          $.return,
        ),
      ),

    variable_declaration: ($) =>
      prec.left(
        PREC.DECLARATION,
        seq(
          "let",
          optional("mut"),
          field("pattern", $.pattern),
          optional(field("type", afterColon($.type_annotation))),
          "=",
          field("initializer", $._expression),
        ),
      ),

    match: ($) =>
      prec.left(
        PREC.MATCH,
        seq(field("matchee", $._expression), "match", $.match_arms),
      ),

    match_arms: ($) =>
      prec.left(
        PREC.MATCH,
        seq(
          optional(seq($.match_arm, ",")),
          sepTrailing1(",", seq("|", $.match_arm)),
          comments($),
        ),
      ),

    match_arm: ($) =>
      prec.left(
        PREC.MATCH,
        seq(field("pattern", $.pattern), "=>", field("body", $._expression)),
      ),

    pattern: ($) =>
      prec.left(
        PREC.DEFAULT,
        choice(
          $.constructor,
          $.collection_pattern,
          $.tuple_pattern,
          $.binding_pattern,
          $.string,
          $.rune,
          $.float,
          $.uint,
          $.int,
          $.bool,
          $.unit,
          $.rest,
          $.wildcard,
          $.range_pattern,
        ),
      ),

    wildcard: (_) => "_",
    binding_pattern: ($) =>
      seq(prec(PREC.MATCH, /[_a-z][_a-z\d]*/), optional(seq("@", $.pattern))),

    constructor: ($) =>
      prec.left(
        PREC.MATCH,
        choice(
          seq(
            field("type", $.type_annotation),
            optional(field("fields", $.constructor_fields)),
          ),
          seq(
            seq("::", field("type", $.type_annotation)),
            repeat(seq("::", field("type", $.type_annotation))),
            optional(field("fields", $.constructor_fields)),
          ),
        ),
      ),

    constructor_fields: ($) =>
      prec.left(
        PREC.MATCH,
        seq("{", sepTrailing(",", "fields", $.constructor_field), "}"),
      ),

    constructor_field: ($) =>
      prec.left(
        PREC.MATCH,
        seq(
          optional(comments($)),
          choice(
            field("field_pattern", $.identifier),
            seq(
              field("field_name", $.identifier),
              field("field_pattern", afterColon($.pattern)),
            ),
          ),
        ),
      ),

    tuple_pattern: ($) =>
      prec.left(100, seq("(", sepTrailing1(",", $.pattern), ")")),

    range_pattern: ($) =>
      prec.left(
        PREC.MATCH,
        seq(
          field("start", choice($.int, $.uint, $.rune, $.identifier)),
          "..",
          optional($.inclusive),
          field("end", choice($.int, $.uint, $.rune, $.identifier)),
        ),
      ),

    call: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("callee", $._expression),
          "(",
          optional(field("args", $.arguments)),
          ")",
        ),
      ),

    arguments: ($) => sepTrailing1(",", $.argument),

    argument: ($) => $._expression,

    type_constructor: ($) =>
      prec.right(
        PREC.LITERAL,
        seq(
          field("type_name", $.type_annotation),
          optional(seq("::", field("member_type_name", $.type_annotation))),
          "{",
          optional(field("fields", $.fields)),
          "}",
        ),
      ),

    enum_literal: ($) =>
      prec.right(
        PREC.LITERAL,
        seq(
          field("enum_name", $.type_annotation),
          "::",
          field("enum_variant_name", $.type_identifier_name),
          "{",
          optional(field("fields", $.fields)),
          "}",
        ),
      ),

    static_member_function: ($) =>
      prec.right(
        PREC.FIELD,
        seq(
          field("type", $.type_identifier),
          "::",
          field("function", $.function_type_identifier),
        ),
      ),

    literal: ($) =>
      prec(
        PREC.LITERAL,
        choice($.unit, $.bool, $.int, $.uint, $.float, $.rune, $.string),
      ),

    unit: (_) => "unit",
    bool: (_) => choice("true", "false"),

    int: (_) =>
      choice(
        token(/\d+d?/),
        seq(choice("0b", "0o", "0d", "0x"), token(/\d+d?/)),
      ),

    uint: (_) =>
      choice(token(/\d+u/), seq(choice("0b", "0o", "0d", "0x"), token(/\d+u/))),

    float: (_) => choice(token(/\d+f/), token(/\d*\.\d+f?/)),
    rune: (_) => choice(token(/'.'/), token(/'\\.'/)),

    string: ($) =>
      seq('"', repeat(choice($.string_content, $.escape_sequence)), '"'),

    collection: ($) =>
      prec.left(PREC.LITERAL, seq("[", optional($.collection_elements), "]")),

    collection_elements: ($) => sepTrailing1(",", $._expression),

    fields: ($) => sepTrailing1(",", $.field),

    field: ($) =>
      seq(
        field("field_name", $.identifier),
        field("field_initializer", afterColon($._expression)),
      ),

    string_content: (_) => token.immediate(prec(1, /[^"\\\n]+/)),

    inclusive: (_) => "=",
